Back30 notification-service шудулер тасок

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,7 @@ spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 
 feign.circuitbreaker.enabled=true
+
+delete.notifications.cron =0 0 1 * * *  
+
+days.to.delete = 180
